Fix Edit Date layout Wrap dropdowns when needed Remove unecessary div

--- a/src/src/routes/Account/MyDeliveries/OrdersList/Order/OrderDetail/OrderDelivery/OrderDeliveryDate/EditDate/EditDate.css
+++ b/src/src/routes/Account/MyDeliveries/OrdersList/Order/OrderDetail/OrderDelivery/OrderDeliveryDate/EditDate/EditDate.css
@@ -2,8 +2,8 @@
 
 .row {
 	display: flex;
-	justify-content: space-between;
-	margin-bottom: 0.625rem;
+	flex-wrap: wrap;
+	margin: 0 -0.25rem;
 
 	@media ScreenXXSMax {
 		display: block;
@@ -11,13 +11,10 @@
 }
 
 .dropDownContainer {
-	flex-basis: 49%;
+	flex: 1 0 160px;
+    margin: 0 0.25rem 0.5rem;
 }
 
 .editDeliveryOuterContainer {
 	margin-top: 0.625rem;
-}
-
-.button {
-	margin-bottom: 0.625rem;
 }
